[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/items/sprites/grid.png" type="Texture" id=1]
[ext_resource path="res://src/inventory/inventory.gd" type="Script" id=2]
[ext_resource path="res://src/inventory/equipment_slots.gd" type="Script" id=3]
[ext_resource path="res://src/inventory/grid_back_pack.gd" type="Script" id=4]
[ext_resource path="res://src/inventory/item_info.tscn" type="PackedScene" id=5]

[node name="Inventory" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryBase" type="Panel" parent="Main"]
margin_left = -288.0
margin_top = -148.0
margin_right = 288.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentSlots" type="Panel" parent="Main"]
self_modulate = Color( 0.282353, 0.282353, 0.282353, 1 )
margin_left = 32.0
margin_top = -116.0
margin_right = 256.0
margin_bottom = 108.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slots" type="Control" parent="Main/EquipmentSlots"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HEAD" type="Panel" parent="Main/EquipmentSlots/Slots"]
margin_left = 80.0
margin_top = 16.0
margin_right = 112.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BODY" type="Panel" parent="Main/EquipmentSlots/Slots"]
margin_left = 64.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MAIN_HAND" type="Panel" parent="Main/EquipmentSlots/Slots"]
margin_left = 16.0
margin_top = 32.0
margin_right = 48.0
margin_bottom = 128.0

[node name="OFF_HAND" type="Panel" parent="Main/EquipmentSlots/Slots"]
margin_left = 144.0
margin_top = 64.0
margin_right = 208.0
margin_bottom = 128.0

[node name="LEGS" type="Panel" parent="Main/EquipmentSlots/Slots"]
margin_left = 64.0
margin_top = 176.0
margin_right = 128.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridBackPack" type="TextureRect" parent="Main"]
margin_left = -256.0
margin_top = -52.0
margin_right = -32.0
margin_bottom = 108.0
texture = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemInfo" parent="." instance=ExtResource( 5 )]

[node name="ItemInfo2" parent="." instance=ExtResource( 5 )]

[node name="Label" type="Label" parent="."]
margin_left = -272.0
margin_top = -140.0
margin_right = 20.0
margin_bottom = -50.0
text = "Hold Left Mouse Button to grab item
Release above proper slot to equip item
Move item out of inventory window to drop it
To replace equiped item with another
you need to at first unequip the old one"
__meta__ = {
"_edit_use_anchors_": false
}
